--- a/grade calculator/index.html
+++ b/grade calculator/index.html
@@ -10,6 +10,10 @@
 
 <body>
 
+    <form action="" class="form">
+        <input type="number" id="input">
+        <input type="submit" name="" id="submit">
+    </form>
 
     <script src="script.js"></script>
 </body>
