--- a/Net Salary Calculator/index.html
+++ b/Net Salary Calculator/index.html
@@ -7,20 +7,16 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-            <!-- link to css -->
-
-        <link rel="stylesheet" href="styles.css">
-    </head>
+         </head>
     <body>
 
         <!-- main div -->
         <div class="main-div">
-        <h1>Net Pay Calculator</h1>
         <div class="app">
           <label>Basic Salary (Monthly) </label>
-          <input type="number" class="basePay" required />
+          <input type="number" class="payInput" required />
           <label>Total Benefits (Monthly) </label>
-          <input type="number" class="benefits" />
+          <input type="number" class="benefitsInput" />
     
           <button class="calcBtn">Calculate</button>
         </div>
