--- a/Speed Detector/index.html
+++ b/Speed Detector/index.html
@@ -7,23 +7,15 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- link to css file -->
-        <link rel="stylesheet" href="styles.css">
-    </head>
+       </head>
     <body>
 
-        <!-- video background -->
-        <video autoplay muted loop id="myVideo">
-            <source  src="../backgrounds/Car2.mp4" type="video/mp4">
-          </video>
-
-
+    
           <!-- main div -->
         <div class="main-div">
-            <h1>SPEED VALIDATION</h1>
             <div class="wrapper">
-                <input type="number" placeholder="Enter speed" class="AreaOfInput"/>
-                <input type="submit" class="submitWork" />
+                <input type="number" placeholder="Enter speed" class="Input"/>
+                <input type="submit" class="submit" />
             </div>
         </div>
         
