--- a/Speed Detector/index.html
+++ b/Speed Detector/index.html
@@ -21,6 +21,6 @@
         
 
         <!-- link to js file -->
-        <script src="script.js" async defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
