--- a/Student Grade/index.html
+++ b/Student Grade/index.html
@@ -24,6 +24,6 @@
       </div>
         
       <!-- link to javascript -->
-        <script src="script.js" async defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
